# nodes-hub

./: .gitignore  Readme.md
example_robot/my_robot_arm/my_python_robot_arm/: peppy.json5  pyproject.toml
example_robot/my_robot_arm/my_python_robot_arm/src/my_python_robot_arm/: __main__.py
example_robot/my_robot_arm/my_python_robot_arm/src/openarm01_arm/: __main__.py
example_robot/my_robot_arm/my_rust_robot_arm/: Cargo.toml  peppy.json5
example_robot/my_robot_arm/my_rust_robot_arm/src/: main.rs
example_robot/my_robot_backbone/my_python_robot_backbone/: peppy.json5  pyproject.toml
example_robot/my_robot_backbone/my_python_robot_backbone/src/my_python_robot_backbone/: __main__.py
example_robot/my_robot_backbone/my_rust_robot_backbone/: Cargo.toml  peppy.json5
example_robot/my_robot_backbone/my_rust_robot_backbone/src/: main.rs
example_robot/my_robot_brain/my_python_robot_brain/: peppy.json5  pyproject.toml
example_robot/my_robot_brain/my_python_robot_brain/src/my_python_robot_brain/: __main__.py  frames.py
example_robot/my_robot_brain/my_python_robot_brain/tests/: test_frames.py
example_robot/my_robot_brain/my_rust_robot_brain/: Cargo.toml  peppy.json5
example_robot/my_robot_brain/my_rust_robot_brain/src/: main.rs
g1/: README.md
g1/g1_arm_node/: .gitignore  peppy.json5  pyproject.toml
g1/g1_arm_node/src/g1_arm_node/: __main__.py  backend.py  gestures.py
g1/g1_arm_node/tests/: test_arm.py
g1/g1_audio_node/: peppy.json5  pyproject.toml
g1/g1_audio_node/src/g1_audio_node/: __main__.py  backend.py
g1/g1_audio_node/tests/: test_audio.py
g1/g1_node/: peppy.json5  pyproject.toml
g1/g1_node/src/g1_node/: __main__.py  backend.py  postures.py
g1/g1_node/tests/: test_backend_and_controller.py  test_postures.py
g1/g1_node_isaac/: peppy.json5  pyproject.toml
g1/g1_node_isaac/src/g1_node_isaac/: __main__.py  engine.py  postures.py
g1/g1_node_isaac/tests/: test_postures.py
g1/g1_node_mujoco/: peppy.json5  pyproject.toml
g1/g1_node_mujoco/src/g1_node_mujoco/: __main__.py  engine.py
g1/g1_node_mujoco/tests/: test_postures.py
lerobot_recorder/: Cargo.toml  README.md  apptainer.def  build.rs  peppy.json5
lerobot_recorder/smoke/: README.md  mock_smoke.json5
lerobot_recorder/src/: config.rs  control.rs  episode.rs  lerobot_sink.rs  listeners.rs  main.rs  plan.rs  provenance.rs  snapshot.rs  status.rs  storage.rs  types.rs
mock_joint_source/: Cargo.toml  apptainer.def  peppy.json5
mock_joint_source/src/: main.rs
openarm01_arm/: peppy.json5
openarm01_arm/mock_python/: peppy.json5
openarm01_arm/mock_rust/: peppy.json5
openarm01_arm/variants/default/: peppy.json5
openarm01_arm/variants/mock_python/: peppy.json5
openarm01_backbone/mock_python/: peppy.json5
openarm01_backbone/mock_python/src/fake_openarm01_controller/: __main__.py
openarm01_backbone/mock_rust/: peppy.json5
openarm01_backbone/mock_rust/src/: main.rs
openarm01_controller/: peppy.json5
openarm01_controller/variants/default/: peppy.json5
openarm01_controller/variants/mock_python/: peppy.json5
openarm01_controller/variants/mock_rust/: peppy.json5
realsense_d4xx/: Cargo.toml  apptainer.def  peppy.json5
realsense_d4xx/src/: frame.rs  main.rs  modes.rs  pipeline.rs
robot_brain_etcher1/: peppy.json5
robot_brain_etcher1/mock_python/: peppy.json5
robot_brain_etcher1/mock_rust/: peppy.json5
robot_brain_etcher1/variants/default/: peppy.json5
robot_brain_etcher1/variants/mock_python/: peppy.json5
robot_brain_etcher1/variants/mock_rust/: peppy.json5
srs_model/: Cargo.toml  README.md  apptainer.def  peppy.json5
srs_model/benches/: compute.rs
srs_model/docs/: gen_diagrams.py
srs_model/src/: fk.rs  lib.rs  main.rs  model.rs
srs_model/src/dynamics/: mod.rs
srs_model/tests/common/: mod.rs
srs_model/tools/: kdl_reference.cpp
uvc_camera/: peppy.json5
uvc_camera/linux/: Cargo.toml  apptainer.def  peppy.json5
uvc_camera/linux/src/: camera.rs  main.rs  services.rs
uvc_camera/linux/src/camera/: capture.rs  nokhwa_impl.rs
uvc_camera/linux/tests/: integration_tests.rs
uvc_camera/macos/: Cargo.toml  peppy.json5
uvc_camera/mock_python/: apptainer.def  peppy.json5  pyproject.toml
uvc_camera/mock_python/src/fake_uvc_camera/: __main__.py
uvc_camera/mock_python/src/uvc_camera_python_mock/: __main__.py  frames.py
uvc_camera/mock_python/tests/: test_frames.py
uvc_camera/mock_rust/: Cargo.toml  Readme.md  apptainer.def  peppy.json5
uvc_camera/mock_rust/src/: main.rs
uvc_camera/variants/linux/: peppy.json5
uvc_camera/variants/macos/: peppy.json5
uvc_camera/variants/mock_python/: peppy.json5
uvc_camera/variants/mock_rust/: peppy.json5
uvc_camera_controls_tests/: Cargo.toml  peppy.json5
uvc_camera_controls_tests/src/: main.rs
uvc_camera_video_reconstruction/: peppy.json5
uvc_camera_video_reconstruction/python/: peppy.json5  pyproject.toml
uvc_camera_video_reconstruction/python/src/uvc_camera_video_reconstruction/: __main__.py
uvc_camera_video_reconstruction/rust/: Cargo.toml  peppy.json5
uvc_camera_video_reconstruction/rust/src/: main.rs
uvc_camera_video_reconstruction/variants/rust/: peppy.json5
zed_camera/: Cargo.toml  apptainer.def  peppy.json5
zed_camera/examples/: depth_bench.rs
zed_camera/src/: calibration.rs  capture.rs  cv_depth.rs  depth_settings.rs  lib.rs  main.rs  resolution.rs
zed_camera_sdk/: .gitignore  README.md  apptainer.def  peppy.json5  pyproject.toml
zed_camera_sdk/src/zed_camera_sdk/: __main__.py  conversions.py  zed.py
zed_camera_sdk/tests/: test_conversions.py
