[package]
name = "lerobot_recorder"
version = "0.1.0"
edition = "2024"

[dependencies]
peppygen = { path = ".peppy/libs/peppygen" }
peppylib = { path = ".peppy/libs/peppylib" }
# Path until public-peppy-libs feat/lerobot-dataset is pushed; then a git pin.
lerobot_dataset = { path = "../../public-peppy-libs-recorder/lerobot_dataset" }
control_core = { git = "https://github.com/Peppy-bot/public-peppy-libs", branch = "main", package = "control_core" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
fs2 = "0.4"
object_store = { version = "0.13", features = ["aws"] }

[dev-dependencies]
tempfile = "3"
