[package]
name = "realsense_d4xx"
version = "0.1.0"
edition = "2024"

[dependencies]
# `buildtime-bindgen` regenerates the FFI bindings against the librealsense2
# headers that apt installs in the container, so we don't have to pin to the
# specific version (currently 2.56.5) the upstream crate ships pre-baked
# bindings for. libclang-dev is already pulled in for this.
realsense-rust = { version = "1.3", features = ["buildtime-bindgen"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
peppygen = { path = ".peppy/libs/peppygen" }
peppylib = { path = ".peppy/libs/peppylib" }
