[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uvc_camera_python_mock"
version = "0.1.0"
description = "uvc_camera_python_mock peppy node"
requires-python = ">=3.11,<3.14"
dependencies = ["peppygen", "av"]

[project.scripts]
uvc_camera_python_mock = "uvc_camera_python_mock.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uvc_camera_python_mock"]

[dependency-groups]
dev = []

[tool.uv.sources]
peppygen = { path = ".peppy/libs/peppygen" }