[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_python_robot_arm"
version = "0.1.0"
description = "my_python_robot_arm peppy node"
requires-python = ">=3.13,<3.14"
dependencies = ["peppygen"]

[project.scripts]
my_python_robot_arm = "my_python_robot_arm.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/my_python_robot_arm"]

[dependency-groups]
dev = []

[tool.uv.sources]
peppygen = { path = ".peppy/libs/peppygen" }
