[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_python_robot_backbone"
version = "0.1.0"
description = "my_python_robot_backbone peppy node"
requires-python = ">=3.11,<3.14"
dependencies = ["peppygen"]

[project.scripts]
my_python_robot_backbone = "my_python_robot_backbone.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/my_python_robot_backbone"]

[dependency-groups]
dev = []

[tool.uv.sources]
peppygen = { path = ".peppy/libs/peppygen" }