[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_python_robot_brain"
version = "0.1.0"
description = "my_python_robot_brain peppy node"
requires-python = ">=3.11,<3.14"
dependencies = ["peppygen", "peppylib"]

[project.scripts]
my_python_robot_brain = "my_python_robot_brain.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/my_python_robot_brain"]

[dependency-groups]
dev = []

[tool.uv.sources]
peppygen = { path = ".peppy/libs/peppygen" }
peppylib = { path = ".peppy/libs/peppylib" }